# esir

./: .gitignore  README.md  embeddings.py  esir_cli.py  esir_lib.py  fs_iter.py  pyproject.toml  scan_state.py  tk_search_gui.py  vector_index_usearch.py
